3.3
	+ Switch from Error to TryCatch for exception handling
	+ Fixed errors with row ID in ManageAdmins table
	+ Added missing EBox::Exceptions uses
	+ Fixed bug in selectSetter which hitted selects on DataForm with
	  'unique' option enabled
	+ EBox::WebServer::removeNginxInclude does not longer throws
	  a exception if the path to remove is not included
	+ Use printableName in Configure Module popup
	+ Replace fork of Apache2::AuthCookie with libapache2-authcookie-perl
	+ Added EBox::Types::IPRange::addressesFromBeginToEnd class method
	+ Set proper trial link in advertisements
	+ Show register link in local backup when not registered
	+ Strip the 'C:\fakepath\' that chrome adds to the file input
	+ Make dump_exceptions key work also for mason exceptions
	+ Pass HTTP_PROXY system environment variable to CGIs as they are
	  used in Zentyal modules
	+ Waiting for Zentyal ready page check is more robust now
	+ Fixed error in the recursive method for getting module dependencies
	+ Fixed JS typo which disabled export backup dialog
	+ Added dbus dependency to avoid problems on some minimal installations
	+ When restoring pre-3.2 backups take in account that apache
	  module was renamed to webadmin
	+ Make sure that we always commit/discard audit of changes when we
	  save/revoke all modules
	+ Add new row attribute "disabled"
	+ Fixed JS glitch which broke the dashboard periodical updates
	+ Better check of referer which skips cloud domain if it does not exists
	+ Avoid warning when stopping a module without FirewallHelper
	+ Include contents of /etc/resolv.conf in bug report
	+ Avoid Apache error screen in login when entering through Zentyal
	  Remote using password
	+ Fix warning comparing undefined string in DomainName type
	+ Rewrite row isEqualTo method using hashElements instead of elements
	+ Only allow to move dashboard widget by its handle
	+ Do not fail if zentyal-mysql.passwd ends with a newline character
	+ Removed old migration code from 3.0 to 3.2