@@ -12,7 +12,7 @@ Vcs-Git: git://git.zentyal.org/zentyal.git
 Package: zentyal-core
 Architecture: all
 Pre-Depends: mysql-server
-Depends: zentyal-common (>= 3.3~1), zentyal-common (<< 3.4), nginx, apache2-mpm-prefork | apache2-mpm-worker, openssl, dbus, libapache2-mod-perl2, libapache-singleton-perl, libsys-cpu-perl, libsys-cpuload-perl, libproc-processtable-perl, mysql-server, libdbd-mysql-perl, libclone-fast-perl, libnet-xmpp-perl, libfilesys-df-perl, adduser, debconf, libfile-copy-recursive-perl, libfile-mmagic-perl, libxml-rss-perl, libtime-piece-perl, libjson-perl, libjson-xs-perl, libyaml-libyaml-perl, cron, anacron, libstring-shellquote-perl, liblinux-inotify2-perl, libredis-perl, redis-server, libxml-simple-perl, libapache2-authcookie-perl, libauthen-simple-pam-perl, libapt-pkg-perl, nmap, libnmap-parser-perl, libjson-rpc-perl, liblexical-persistence-perl, libterm-readline-gnu-perl, libtest-deep-perl, liburi-encode-perl, update-notifier-common, gpgv, ${misc:Depends}
+Depends: zentyal-common (>= 3.3~1), zentyal-common (<< 3.4), nginx, apache2-mpm-prefork | apache2-mpm-worker, openssl, dbus, libapache2-mod-perl2, libapache-singleton-perl, libsys-cpu-perl, libsys-cpuload-perl, libproc-processtable-perl, mysql-server, libdbd-mysql-perl, libclone-fast-perl, libnet-xmpp-perl, libfilesys-df-perl, adduser, debconf, libfile-copy-recursive-perl, libfile-mmagic-perl, libxml-rss-perl, libtime-piece-perl, libjson-perl, libjson-xs-perl, libyaml-libyaml-perl, cron, anacron, libstring-shellquote-perl, liblinux-inotify2-perl, libredis-perl, redis-server, libxml-simple-perl, libapache2-authcookie-perl, libauthen-simple-pam-perl, libapt-pkg-perl, nmap, libnmap-parser-perl, libjson-rpc-perl, liblexical-persistence-perl, libterm-readline-gnu-perl, libtest-deep-perl, liburi-encode-perl, update-notifier-common, gpgv, apport, curl, ${misc:Depends}
 Description: Zentyal - Core
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
