@@ -157,7 +157,6 @@ sub masonParameters
     }
 
     if ($showMessage) {
-        my $sysinfo = EBox::Global->modInstance('sysinfo');
         my $state = $sysinfo->get_state();
         my $lastTime = $state->{lastMessageTime};
         my $currentTime = time();
@@ -169,6 +168,23 @@ sub masonParameters
             if ($offset >= $msg->{days}) {
                 push (@params, 'message' => $msg);
                 last;
+            }
+        }
+    }
+
+    if (EBox::Config::boolean('debug')) {
+        my $report = $sysinfo->model('Debug')->value('enabled');
+        # TODO: currently apport reports are only enabled for openchange
+        if ($report and EBox::Global->modExists('openchange')) {
+            EBox::Sudo::silentRoot('ls /var/crash | grep -q ^samba');
+            if ($? == 0) {
+                my $style = 'margin-top: 10px; margin-bottom: -6px;';
+                my $text = __sx('Crash report found! Click the button if you want to send the following files anonymously to help fixing the issue: {p}. Although Zentyal will make a good use of this information, please review the files if you want to be sure they do not contain any sensible information. {oc}{obs}Submit crash report{cb} {obd}Discard{cb}{cc}',
+                                p  => '/var/crash/samba*',
+                                obs => "<button style=\"$style\" onclick=\"Zentyal.CrashReport.report()\">",
+                                obd => "<button style=\"$style\" onclick=\"Zentyal.CrashReport.discard()\">",
+                                cb => '</button>', oc => '<center>', cc => '</center>');
+                push (@params, 'crashreport' => $text);
             }
         }
     }
