@@ -194,6 +194,13 @@ sub _setConf
     $self->_writeCSSFiles();
     $self->_reportAdminPort();
     $self->enableRestartOnTrigger();
+
+    my $apportEnabled = 0;
+    if (EBox::Config::boolean('debug')) {
+        my $sysinfo = EBox::Global->modInstance('sysinfo');
+        $apportEnabled = $sysinfo->model('Debug')->value('enabled');
+    }
+    EBox::Sudo::root("sed -i 's/^enabled=.*/enabled=$apportEnabled/' /etc/default/apport");
 }
 
 sub _enforceServiceState
@@ -201,6 +208,8 @@ sub _enforceServiceState
     my ($self) = @_;
 
     $self->_daemon('restart');
+
+    EBox::Service::manage('apport', 'restart');
 }
 
 sub _nginxConfFile
