@@ -1,0 +1,22 @@
+#!/bin/bash
+
+file=$1
+
+if [ -z "$file" ]
+then
+    echo "Usage: $0 <filename>"
+    exit 1
+fi
+
+URL=http://crashreport.zentyal.org/report/
+
+gzip $file
+RESULT=$(curl -F "file=@${file}.gz" $URL)
+
+if [ "$RESULT" != "OK" ]
+then
+    print "Failed: $RESULT"
+    exit 1
+fi
+
+exit 0
